--- a/templates/main.html
+++ b/templates/main.html
@@ -1,26 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
-    <title> Data Collector App</title>
-    <head>
-        <link type="text/css" href="../static/main.css" rel="stylesheet">
-        <link type="text/css" href="{{url_for('static', filename='main.css')}}" rel="stylesheet">
-    </head>
-    <body>
-        <div class="container">
-            <h1>UBC Roommate Finder</h1>
-            <h2>Please fill your information and requirements</h2>
-            <div class="message">
-                {{text}}
-            </div>
-            <form action="{{url_for('success')}}" method="POST">
-                <input title="Name" placeholder="Enter your name", type="text" name="name" required> <br>
-                <input title="Gender" placeholder="Enter your gender", type="text" name="gender" required> <br>
-                <input title="Budget" placeholder="Enter your rental budget", type="number" min="0" name="budget" required> <br>
-                <textarea placeholder=" Enter your requirements" rows="3" cols="44" name = "requirements"></textarea> <br>
-                <button type="submit" class="generalButton">Submit</button>
-            </form>
-            <a href="/content"><button class="generalButton">Content</button></a>
-            <a href="/logout"><button class="generalButton">Logout</button></a>
+  <title>Roommate Finder</title>
+  <head>
+    <link type="text/css" href="../static/main.css" rel="stylesheet" />
+    <link
+      type="text/css"
+      href="{{url_for('static', filename='main.css')}}"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <div class="container">
+      <h1>Roommate Finder</h1>
+      <h2>Fill the following form and find a great roommate now!</h2>
+      <div class="message">{{text}}</div>
+      <form action="{{url_for('success')}}" method="POST">
+        <input
+          title="Name"
+          placeholder="Enter your name"
+          ,
+          type="text"
+          name="name"
+          required
+        />
+        <br />
+        <br />
+        <label class="gender-font">Your gender:</label>
+        <select name="gender" id="gender">
+          <option value="M">Male</option>
+          <option value="F">Female</option>
+          <option value="N">Prefer not say</option>
+        </select>
+        <br />
+        <br />
+        <label for="gender" class="gender-font"
+          >Prefered roommate gender:</label
+        >
+        <select name="gender" id="gender">
+          <option value="M">Male</option>
+          <option value="F">Female</option>
+          <option value="N">No Preference</option>
+        </select>
+
+        <div class="budget-margin">
+          <input
+            title="Budget"
+            placeholder="Enter your rental budget"
+            ,
+            type="number"
+            min="0"
+            name="budget"
+            required
+          />
         </div>
-    </body>
+
+        <div class="budget-margin">
+          <textarea
+            class="requirements"
+            placeholder=" Enter your requirements"
+            rows="4"
+            cols="44"
+            name="requirements"
+          ></textarea>
+        </div>
+        <button type="submit" class="generalButton submit-margin">
+          Submit
+        </button>
+      </form>
+      <div class="row">
+        <button class="t-button generalButton content-margin">
+          Check Submissions
+        </button>
+        <button class="t-button generalButton content-margin">
+          Remove Submissions
+        </button>
+      </div>
+      <div class="row">
+        <a href="/logout"
+          ><button class="generalButton content-margin">Logout</button></a
+        >
+      </div>
+    </div>
+  </body>
 </html>
