--- a/templates/main.html
+++ b/templates/main.html
@@ -68,9 +68,11 @@
         </button>
       </form>
       <div class="row">
-        <button class="t-button generalButton content-margin">
-          Check Submissions
-        </button>
+        <a href="/content" style="text-decoration: none">
+          <button class="t-button generalButton content-margin">
+            Check Submissions
+          </button>
+        </a>
         <button class="t-button generalButton content-margin">
           Remove Submissions
         </button>
